Unify profile friends

--- a/example.html
+++ b/example.html
@@ -32,7 +32,13 @@
 				init_friends: true,
 
 				// песочница в одноклассниках
-				ok_sandbok: true
+				ok_sandbok: true,
+
+				// сводить к одному виду поля профиля
+				unify_profile_fields: true,
+
+				// оставлять остальные поля профиля
+				not_unified_fields: false
 			},
 
 			init: function(initedContext) {
